--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha p0001.spec.js",
     "start": "node main.js"
   },
   "repository": {
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/sandy-yeseul/project-euler-js/issues"
   },
-  "homepage": "https://github.com/sandy-yeseul/project-euler-js#readme"
+  "homepage": "https://github.com/sandy-yeseul/project-euler-js#readme",
+  "dependencies": {
+    "chai": "^4.3.6"
+  }
 }
